--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -2,7 +2,7 @@
 /* npx @tailwindcss/cli -i ./src/styles/input.css -o ./src/styles/output.css --watch */
 
 @layer base {
-    .bgColor{
+    .bgColor {
         background: linear-gradient(#2196f3, #e91e63);
     }
 }
@@ -89,6 +89,38 @@
 
         &::before {
             animation-delay: 6s;
+        }
+    }
+
+    .txt{
+        width: 100%;
+        height: 100px;
+        margin: 0 3px;
+        outline: none;
+        border: none;
+        color: white;
+        font-size: 25px;
+        text-align: right;
+        padding-right: 10px;
+        pointer-events: none;
+        background: transparent;
+    }
+
+    .btn {
+        height: 65px;
+        color: white;
+        width: calc(100% / 4 - 5px);
+        background-color: transparent;
+        border-radius: 12px;
+        margin-top: 15px;
+        outline: none;
+        border: none;
+        font-size: 25px;
+        cursor: pointer;
+        transition: all .3s ease;
+
+        &:hover{
+            background-color: rgba(255, 255, 255, 0.1);
         }
     }
 }
